--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /Semana 2 - dia 1/KyusTeste/nbproject/private/
 /Semana 2 - dia 1/KyusTeste/build/
+/Semana 2 - dia 2/Carro/nbproject/private/
+/Semana 2 - dia 2/Carro/build/
+/Semana 2 - dia 1/Gato/nbproject/private/
+/Semana 2 - dia 1/Projeto 1/Gato/nbproject/private/
+/Semana 2 - dia 2/Projeto 2/Carro/build/
+/Semana 2 - dia 2/Projeto 2/Carro/nbproject/private/
+/Projeto 1/Gato/nbproject/private/
+/Projeto 2/Carro/build/
+/Projeto 2/Carro/nbproject/private/
