--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Projeto 1/Gato/nbproject/private/
 /Projeto 2/Carro/build/
 /Projeto 2/Carro/nbproject/private/
+/Projeto 3/Moto/nbproject/private/
+/Projeto 3/Moto/build/
