--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /Projeto 2/Carro/nbproject/private/
 /Projeto 3/Moto/nbproject/private/
 /Projeto 3/Moto/build/
+/Motoca/nbproject/private/
+/Motoca/build/
+/Projeto 1/Teste/nbproject/private/
+/Projeto 1/Teste/build/
