--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /Motoca/build/
 /Projeto 1/Teste/nbproject/private/
 /Projeto 1/Teste/build/
+/Projeto 4/Lapiseira/nbproject/private/
+/Projeto 4/Lapiseira/build/
