--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /Projeto 1/Teste/build/
 /Projeto 4/Lapiseira/nbproject/private/
 /Projeto 4/Lapiseira/build/
+/Atividades em sala/Vetores/nbproject/private/
+/Atividades em sala/Vetores/build/
+/Nova Pasta/Interativo/nbproject/private/
